@@ -1,3 +1,8 @@
+2006-12-09  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.texi (Bug Reports): Add code to retrieve function call
+	traces.
+
 2006-11-07  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi (Configuration): scp is the default method.
